# datahackers_live

./: 404.html  README.md  app.py  gerador.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html
canal/: index.html
curso/: index.html
data/: vendas.csv
docs/: canal.md  curso.md  index.md
search/: search_index.json
